# concept-redefinition-v2

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml  qwen_base.yaml  qwen_instruct.yaml  smoke.yaml
data/: concept_categories.json  concept_pairs.jsonl
scripts/: analyze_movement.py  collect_activations.py  make_dataset.py  patch_activations.py  run_all.sh  run_behavior.py  summarize_reports.py  train_mapping_detector.py  train_probe.py  vocab_effects.py
src/redef/: utils.py
tests/: test_dataset.py  test_mapping_detector.py  test_summarize_reports.py  test_utils.py
