[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "concept-redefinition-v2"
version = "0.2.0"
description = "White-box experiments for in-context lexical/concept redefinition"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
